--- a/superset/assets/src/dashboard/stylesheets/grid.less
+++ b/superset/assets/src/dashboard/stylesheets/grid.less
@@ -1,5 +1,4 @@
 .grid-container {
-  min-height: 100%;
   position: relative;
   margin: 24px;
   /* without this, the grid will not get smaller upon toggling the builder panel on */
@@ -13,10 +12,8 @@
 }
 
 .grid-content {
-  min-height: 100%;
   display: flex;
   flex-direction: column;
-  margin-bottom: 100px;
 }
 
 /* gutters between rows */
